[package]
name = "rsu"
version = "0.1.0"
authors = ["rongjie.duan@autocore.ai <rongjie.duan@autocore.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.0"
yaml-rust = "0.4"
linked-hash-map = "0.5.4"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.*"
lazy_static = "1.*.*"
tokio = { version = "1.*.*", features = ["full"] }
url = { version = "2", features = ["serde"] }
percent-encoding = "2.1.0"
zenoh =  { git = "https://github.com/eclipse-zenoh/zenoh"}
reqwest = { version = "0.11", features = ["json"] }

[workspace]

members = [
  "plugins/traffic_light",
  "plugins/vehicle_status",
]
